fix: apply stabilizing of catalog content width to prevent layout shifts

--- a/src/common/components/Header/Header.module.scss
+++ b/src/common/components/Header/Header.module.scss
@@ -49,6 +49,10 @@
 
 .burgerIcon {
     display: none;
+
+    svg {
+        font-size: 24px;
+    }
 }
 
 .doxIcon {
